--- a/app.json
+++ b/app.json
@@ -8,5 +8,12 @@
         {
         "url": "heroku/python"
         }
-    ]
+    ],
+    "environments": {
+        "test": {
+          "scripts": {
+            "test": "flask run"
+          }
+        }
+      }
 }
