--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
-flask
-flask-socketio
+astroid==2.3.2
+Click==7.0
+colorama==0.4.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+numpy==1.17.2
+pandas==0.25.1
+pylint==2.4.3
+python-dateutil==2.8.0
+pytz==2019.2
+six==1.12.0
+typed-ast==1.4.0
+Werkzeug==0.16.0
+wrapt==1.11.2
