--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.17.2
-pandas==0.25.1
+#pandas==0.25.1
 pylint==2.4.3
 python-dateutil==2.8.0
 pytz==2019.2
